ros2_rpi_lidar/log/build_2023-09-30_21-35-51/ros2_rpi_lidar/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/jlukas/My_Project/ROS2/ros2_rpi_lidar/install/ros2_rpi_lidar/lib/python3.10/site-packages/ros2_rpi_lidar/lidar_publisher.py", line 22
    print(type(self.lidar.read())
         ^
SyntaxError: '(' was never closed

